Changed gallery to a slider viewer. Organized HTML better - improving readability     standardized naming scheme     grouped elements into divs in a more predictable manner Organized CSS better - improved readability Combined About Us and Quote into one row "row-2". Made row-2 responsive - stacking on screens under 400px. Fixed the footer to be displayed at the bottom of page and not overlap other elements. Site is looking good on mobile, needs work for desktop.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,5 @@
 
-/* 
---text: rgb(14, 23, 15);
---background: rgb(249, 251, 249);
---primary: rgb(105, 165, 117);
---secondary: 166, 186, 201;
---accent: rgb(138, 145, 184);
-
- */
-
- @media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
     :root {
       --text: rgb(9, 10, 14);
       --background: rgb(250, 250, 252);
@@ -38,15 +29,114 @@ body {
   font-weight: 400;
   background: rgb(250, 250, 252);
   margin: 0;
-  padding: 0;
 }
 
 footer {
+    position: relative;
+    left: 0;
+    bottom: 0;
+    max-height: 2.5rem;
+    width: 100%;
     font-family: 'Hedvig Letters Sans', sans-serif;
-    display: block;
-    background-color: rgb(198, 166, 167);
+    text-align: center;
+    display: inline;
+    background-color: rgb(250, 250, 252, .5);
+    font-size: small;
+}
+
+/* Second row start */
+
+.row-2 {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 2rem;
+    max-height: 20rem;
+    padding-bottom: 1rem;
+}
+
+.column {
+    width: 50%;
+    max-height: fit-content;
+    border-style: groove; 
+    border-width: 2px;
+    border-radius: 10px;
+}
+
+.about-us {
+    margin: 5px;
     padding: 5px;
-    border-style: ridge;
+    background-color: rgb(177, 163, 133);
+    color: rgb(9, 10, 14);
+    font-family: 'Hedvig Letters Sans', sans-serif;
+    margin: 5px;
+    padding: 5px;
+}
+
+    .about-us h1 {
+        text-align: center;
+    }
+
+    .about-us p {
+        text-align: left;
+    }
+
+    .quote-form {
+        margin: 5px;
+        padding: 5px;
+        display: inline-block;
+        background-color: rgb(111, 122, 163);
+    }
+
+    .quote-form input[type=text], input[type=tel], input[type=email], textarea {
+        font-family: 'Hedvig Letters Sans', sans-serif;
+        background-color: rgb(250, 250, 252);
+        border-style: groove;
+        border-radius: 10px;
+        border-width: 2px;
+        width: 100%;
+        height: auto;
+        padding: 12px 20px;
+        margin: 8px 0;
+        box-sizing: border-box;
+    }
+    
+    .quote-form button[type=submit] {
+        font-family: 'Hedvig Letters Sans', sans-serif;
+        font-size: larger;
+        font-weight: bold;
+        background-color: rgb(250, 250, 252);
+        color: rgb(9, 10, 14);
+        border-style: groove;
+        border-radius: 10px;
+        border-width: 2px;
+        width: 100%;
+        height: auto;
+        padding: 12px 20px;
+        margin: 8px 0;
+        box-sizing: border-box;
+    }
+    
+    .quote-form button[type=submit]:hover {
+        background-color: rgb(177, 163, 133);
+    }
+    
+    .quote-form label {
+        font-family: 'Hedvig Letters Sans', sans-serif;
+        color: rgb(239, 241, 245);
+    }
+    
+    .quote-form h1 {
+        color: rgb(239, 241, 245);
+        text-align: center;
+        font-weight: 300px;
+    }
+
+/* Second row end */    
+
+.brand-name {
+    font-size: 1.5rem;
+    font-weight: bolder;
+    margin: .5rem;
 }
 
 .navbar {
@@ -55,12 +145,6 @@ footer {
     align-items: center;
     background-color: rgb(198, 166, 167);
     color:  rgb(9, 10, 14);
-}
-
-.brand-name {
-    font-size: 1.5rem;
-    font-weight: bolder;
-    margin: .5rem;
 }
 
 .navbar-links {
@@ -107,7 +191,12 @@ footer {
     border-radius: 10px;
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 600px) {
+
+    .column {
+        width: 100%;
+    }
+
     .toggle-button {
         display: flex;
     }
@@ -140,70 +229,52 @@ footer {
     }
 }
 
-form {
-    border-style: groove; 
-    border-width: 2px;
-    margin: 5px;
-    padding: 5px;
-    display: inline-block;
-    background-color: rgb(111, 122, 163);
-    max-width: 500px;
-    width: auto;
+
+
+.gallery-container {
+    padding: 2rem;
 }
 
-.quote__form input[type=text], input[type=tel], input[type=email], textarea {
-    font-family: 'Hedvig Letters Sans', sans-serif;
-    background-color: rgb(250, 250, 252);
-    border-style: groove;
-    border-radius: 10px;
-    border-width: 2px;
-    width: 100%;
-    height: auto;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
+.slider-wrapper {
+    position: relative;
+    max-width: 48rem;
+    margin: 0 auto;
 }
 
-.quote__form button[type=submit] {
-    font-family: 'Hedvig Letters Sans', sans-serif;
-    font-size: larger;
-    font-weight: bold;
-    background-color: rgb(250, 250, 252);
-    color: rgb(9, 10, 14);
-    border-style: groove;
-    border-radius: 10px;
-    border-width: 2px;
-    width: 100%;
-    height: auto;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
+.slider {
+    display: flex;
+    aspect-ratio: 16 / 9;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    border-radius: 0.5rem;
 }
 
-.quote__form button[type=submit]:hover {
-    background-color: rgb(177, 163, 133);
+.slider img {
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
 }
 
-.quote__form label {
-    font-family: 'Hedvig Letters Sans', sans-serif;
-    color: rgb(239, 241, 245);
+.slider-nav {
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
 }
 
-.quote__form h2 {
-    color: rgb(239, 241, 245);
-    text-align: center;
-    font-weight: 300px;
+.slider-nav a {
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: #fff;
+    opacity: 0.75;
+    transition: opacity ease 250ms;
 }
 
-#about__us {
-    text-align: left;
-    color: rgb(9, 10, 14);
-    font-family: 'Hedvig Letters Sans', sans-serif;
-    max-width: 500px;
+.slider-nav a:hover {
+    opacity: 1;
 }
-
-#about__us h2 {
-    text-align: left;
-}
-
-
